// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiHighlight behavior loose matching matches strings with different casing 1`] = `
<span>
  different 
  <mark
    class="wuiMark"
  >
    case
  </mark>
   match
</span>
`;

exports[`WuiHighlight behavior matching applies to all matches 1`] = `
<span>
  <mark
    class="wuiMark"
  >
    match
  </mark>
   
  <mark
    class="wuiMark"
  >
    match
  </mark>
   
  <mark
    class="wuiMark"
  >
    match
  </mark>
</span>
`;

exports[`WuiHighlight behavior matching only applies to first match 1`] = `
<span>
  <mark
    class="wuiMark"
  >
    match
  </mark>
   match match
</span>
`;

exports[`WuiHighlight behavior strict matching doesn't match strings with different casing 1`] = `
<span>
  different case match
</span>
`;

exports[`WuiHighlight is rendered 1`] = `
<span
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  value
</span>
`;
